Fixing layout and overflow bugs

--- a/src/styles/components/api-list/api-list.scss
+++ b/src/styles/components/api-list/api-list.scss
@@ -1,3 +1,19 @@
 .api-list-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: stretch;
   border: 1px solid maroon;
+}
+
+.api-list-heading {
+  color: $gray-500;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 0.025em;
+}
+
+.api-list-filters-container {
 }
